--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       });
 
       btnStop.addEventListener("click", () => {
-        swiper.autoplay.stopt();
+        swiper.autoplay.stop();
       });
     </script>
   </body>
